--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "bootstrap": "5.1.3",
     "craco-alias": "^3.0.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "immer": "^9.0.12",
     "react": "^17.0.2",
