--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-idle-timer": "^4.6.4",
     "react-query": "^3.30.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
